--- a/Live QnA/package.json
+++ b/Live QnA/package.json
@@ -59,6 +59,11 @@
     "typescript": "^5.6.3"
   },
   "overrides": {
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "postcss": "^8.4.31",
+    "nth-check": "^2.1.1",
+    "js-yaml": "^4.1.0",
+    "webpack-dev-server": "^5.2.1",
+    "prismjs": "^1.30.0"
   }
 }
